# simdjson-sample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: sample.json
src/: main.cpp
